# detect-pythons

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  LICENSE.txt  README.rst  action.yaml  action.yml  pyproject.toml  tox.ini
.github/workflows/: readme_example.yaml  test.yaml
changelog.d/: 20231031_064619_kurtmckee_resolve_none_in_identifications.rst  20231215_085902_kurtmckee_test_graalpy.rst  20231215_094420_kurtmckee_update_test_suite.rst  20231215_210846_kurtmckee_simplify.rst  20231215_223110_kurtmckee_document_macos_inconsistencies.rst  20240205_134734_kurtmckee_updates.rst  20250306_060146_kurtmckee_updates.rst  20250306_072308_kurtmckee_prep_for_github_marketplace.rst
src/detect_pythons/: detector.ps1  detector.sh  identify.py  sync_detector_code.py  sync_identify_code.py  sync_readme_example.py
tests/: test_identify.py  test_sync_detector_code.py  test_sync_identify_code.py  test_sync_readme_example.py
