[tool.poetry]
name = "detect_pythons"
version = "1.0.0"
description = "A GitHub action to detect installed Pythons. Suitable for cache-busting."
authors = ["Kurt McKee <contactme@kurtmckee.org>"]
license = "MIT"
readme = "README.rst"


[tool.poetry.dependencies]
python = ">=3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.coverage.run]
parallel = true
branch = true
source = [
    "detect_pythons",
    "tests",
]


[tool.coverage.paths]
source = [
    "src",
    "*/site-packages",
]


[tool.coverage.report]
skip_covered = true
fail_under = 100


[tool.coverage.html]
skip_covered = false
directory = "htmlcov/"


[tool.isort]
profile = "black"


[tool.scriv]
version = "literal: pyproject.toml: tool.poetry.version"
categories = [
    "Added",
    "Fixed",
    "Removed",
    "Changed",
    "Deprecated",
    "Security",
]
entry_title_template = "{{ version }} - {{ date.strftime('%Y-%m-%d') }}"
format = "rst"
fragment_directory = "changelog.d"
insert_marker = "scriv-insert-here"
main_branches = ["main", "releases"]
new_fragment_template = "file: fragment-template.rst.txt"
