[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# poetry
# ------

[tool.poetry]
name = "detect_pythons"
version = "1.1.0"
description = "A GitHub action to detect installed Pythons. Suitable for cache-busting."
authors = ["Kurt McKee <contactme@kurtmckee.org>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = ">=3.8"


# chipshot
# --------

[tool.chipshot]
template = """
This file is a part of the detect-pythons project.
https://github.com/kurtmckee/detect-pythons
Copyright 2023-{{ year }} Kurt McKee <contactme@kurtmckee.org>
SPDX-License-Identifier: MIT
"""
exclusions = [
    "changelog.d/",
]


# coverage
# --------

[tool.coverage.run]
parallel = true
branch = true
source = [
    "detect_pythons",
    "tests",
]

[tool.coverage.paths]
source = [
    "src",
    "*/site-packages",
]

[tool.coverage.report]
skip_covered = true
fail_under = 100

[tool.coverage.html]
skip_covered = false
directory = "htmlcov/"


# isort
# -----

[tool.isort]
profile = "black"


# pytest
# ------

[tool.pytest.ini_options]
addopts = "--color=yes"
filterwarnings = [
    "error",
]


# scriv
# -----

[tool.scriv]
version = "literal: pyproject.toml: tool.poetry.version"
categories = [
    "Python support",
    "Added",
    "Fixed",
    "Removed",
    "Changed",
    "Deprecated",
    "Security",
]
entry_title_template = "{{ version }} - {{ date.strftime('%Y-%m-%d') }}"
format = "rst"
fragment_directory = "changelog.d"
insert_marker = "scriv-insert-here"
main_branches = ["main", "releases"]
new_fragment_template = "file: fragment-template.rst.txt"
