[project]
name = "detect_pythons"
version = "1.1.1"
description = "A GitHub action to detect installed Pythons. Suitable for cache-busting."
authors = [{ name = "Kurt McKee", email = "contactme@kurtmckee.org" }]
license = "MIT"
readme = "README.rst"
requires-python = ">=3.8"
classifiers = ["Private :: Do not Upload"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


# chipshot
# --------

[tool.chipshot]
template = """
This file is a part of the detect-pythons project.
https://github.com/kurtmckee/detect-pythons
Copyright 2023-{{ year }} Kurt McKee <contactme@kurtmckee.org>
SPDX-License-Identifier: MIT
"""
exclusions = [
    "changelog.d/",
]


# coverage
# --------

[tool.coverage.run]
parallel = true
branch = true
source = [
    "detect_pythons",
    "tests",
]

[tool.coverage.paths]
source = [
    "src",
    "*/site-packages",
]

[tool.coverage.report]
skip_covered = true
fail_under = 100

[tool.coverage.html]
skip_covered = false
directory = "htmlcov/"


# flake8
# ------

[tool.flake8]
max-line-length = 80
extend-select = ["B950"]
extend-ignore = ["E203", "E501", "E701"]


# isort
# -----

[tool.isort]
profile = "black"


# pytest
# ------

[tool.pytest]
addopts = [
    "--color=yes",
]
filterwarnings = [
    "error",
]


# scriv
# -----

[tool.scriv]
version = "literal: pyproject.toml: project.version"
categories = [
    "Python support",
    "Added",
    "Fixed",
    "Removed",
    "Changed",
    "Deprecated",
    "Security",
]
entry_title_template = "{{ version }} - {{ date.strftime('%Y-%m-%d') }}"
format = "rst"
fragment_directory = "changelog.d"
insert_marker = "scriv-insert-here"
main_branches = ["main", "releases"]
new_fragment_template = "file: fragment-template.rst.txt"
